openshift/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: eli-backend
spec:
  replicas: 4   # <-- X (Hej Jonas, you can change to X+2) i test it :-)
  selector:
    matchLabels:
      app: eli-backend
  template:
    metadata:
      labels:
        app: eli-backend
    spec:
      containers:
        - name: backend
          image: ghcr.io/fashinski/guestbook-backend:dev
          imagePullPolicy: Always
          ports:
            - containerPort: 8080

          resources:
            requests:
              cpu: "50m"
              memory: "64Mi"
            limits:
              cpu: "200m"
              memory: "256Mi"

          livenessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 5
---
apiVersion: v1
kind: Service
metadata:
  name: eli-backend
spec:
  selector:
    app: eli-backend
  ports:
    - name: http
      port: 8080
      targetPort: 8080
  type: ClusterIP
