openshift/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: eli-frontend
spec:
  replicas: 2   # <-- X ( Hej Jonas :-) welcome to change it to X+2)
  selector:
    matchLabels:
      app: eli-frontend
  template:
    metadata:
      labels:
        app: eli-frontend
    spec:
      containers:
        - name: frontend
          image: ghcr.io/fashinski/guestbook-frontend:dev
          imagePullPolicy: Always
          ports:
            - containerPort: 8080

          resources:
            requests:
              cpu: "50m"
              memory: "64Mi"
            limits:
              cpu: "200m"
              memory: "256Mi"

          livenessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 5
---
apiVersion: v1
kind: Service
metadata:
  name: eli-frontend
spec:
  selector:
    app: eli-frontend
  ports:
    - name: http
      port: 8080
      targetPort: 8080
  type: ClusterIP
