openshift/postgres.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: eli-postgres
spec:
  replicas: 1
  selector:
    matchLabels:
      app: eli-postgres
  template:
    metadata:
      labels:
        app: eli-postgres
    spec:
      containers:
        - name: postgres
          image: quay.io/fedora/postgresql-16:latest
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: postgres-data
              mountPath: /var/lib/pgsql/data
      volumes:
        - name: postgres-data
          persistentVolumeClaim:
            claimName: eli-postgres-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: eli-postgres
spec:
  type: ClusterIP
  selector:
    app: eli-postgres
  ports:
    - name: postgres
      port: 5432
      targetPort: 5432
