openshift/redis.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: eli-redis
spec:
  replicas: 1
  selector:
    matchLabels:
      app: eli-redis
  template:
    metadata:
      labels:
        app: eli-redis
    spec:
      containers:
        - name: redis
          image: quay.io/kurs/redis:latest
          ports:
            - containerPort: 6379

          resources:
            requests:
              cpu: "50m"
              memory: "64Mi"
            limits:
              cpu: "200m"
              memory: "256Mi"

          volumeMounts:
            - name: redis-data
              mountPath: /var/lib/redis/data
      volumes:
        - name: redis-data
          persistentVolumeClaim:
            claimName: eli-redis-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: eli-redis
spec:
  type: ClusterIP
  selector:
    app: eli-redis
  ports:
    - name: redis
      port: 6379
      targetPort: 6379
