openshift/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: eli-guestbook
spec:
  to:
    kind: Service
    name: eli-frontend
  port:
    targetPort: http
  tls:
    termination: edge
